--- a/src/shared/main.scss
+++ b/src/shared/main.scss
@@ -7,6 +7,6 @@ body {
 }
 
 main {
-  background: #444441;
+  background: #3d3d3d;
   padding: 30px 0 100px;
 }
